# docs/swagger.json
@@ -10,6 +10,141 @@
         "version": "1.0"
     },
     "paths": {
+        "/admin/report/block": {
+            "put": {
+                "description": "block user",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "admin"
+                ],
+                "summary": "Block user",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "JWT Token",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "description": "Report ID",
+                        "name": "report_id",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Report information",
+                        "schema": {
+                            "$ref": "#/definitions/dto.Response"
+                        }
+                    },
+                    "400": {
+                        "description": "Invalid request payload",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/admin/sport-activity": {
+            "post": {
+                "description": "add sport",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "admin"
+                ],
+                "summary": "Add sport",
+                "parameters": [
+                    {
+                        "description": "Sport information",
+                        "name": "Sport",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/dto.Sport"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Sport information",
+                        "schema": {
+                            "$ref": "#/definitions/dto.Sport"
+                        }
+                    },
+                    "400": {
+                        "description": "Invalid request payload",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/admin/users": {
+            "get": {
+                "description": "get all users",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "admin"
+                ],
+                "summary": "Get users",
+                "responses": {
+                    "200": {
+                        "description": "User information",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/dto.User"
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Invalid request payload",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
         "/trainee/profile/{id}": {
             "get": {
                 "description": "Retrieves the profile information of a trainee by ID",
@@ -111,6 +246,41 @@
                 }
             }
         },
+        "/trainee/program/": {
+            "get": {
+                "description": "Retrieves the program of a trainee by ID",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "trainee"
+                ],
+                "summary": "Get program",
+                "responses": {
+                    "200": {
+                        "description": "Trainee program",
+                        "schema": {
+                            "$ref": "#/definitions/dto.TrainingProgram"
+                        }
+                    },
+                    "404": {
+                        "description": "Trainee not found",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
         "/trainee/request/": {
             "post": {
                 "description": "Creates a new program request with the provided data",
@@ -170,7 +340,7 @@
                 }
             }
         },
-        "/trainee/request/{id}": {
+        "/trainee/request/all": {
             "get": {
                 "description": "Retrieves the request of a trainee by ID",
                 "consumes": [
@@ -212,7 +382,9 @@
                         }
                     }
                 }
-            },
+            }
+        },
+        "/trainee/request/{id}": {
             "put": {
                 "description": "Change request status by trainee",
                 "consumes": [
@@ -961,6 +1133,20 @@
                 }
             }
         },
+        "dto.Sport": {
+            "type": "object",
+            "properties": {
+                "description": {
+                    "type": "string"
+                },
+                "title": {
+                    "type": "string"
+                },
+                "video_path": {
+                    "type": "string"
+                }
+            }
+        },
         "dto.SportActivitRequest": {
             "type": "object",
             "properties": {
@@ -1172,13 +1358,19 @@
                 "email": {
                     "type": "string"
                 },
+                "first_name": {
+                    "type": "string"
+                },
                 "language": {
+                    "type": "string"
+                },
+                "last_name": {
                     "type": "string"
                 },
                 "status": {
                     "type": "string"
                 },
-                "user_name": {
+                "username": {
                     "type": "string"
                 }
             }
@@ -1190,6 +1382,15 @@
                     "type": "string"
                 },
                 "education": {
+                    "type": "string"
+                },
+                "first_name": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "last_name": {
                     "type": "string"
                 },
                 "sports": {
